<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_flash_on_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_scoreboard"
        android:icon="@drawable/ic_baseline_equalizer_24"
        android:title="@string/scoreboard" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/language" />



</menu>