<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/radio">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:checked="true"
            android:padding="20dp"

            android:buttonTint="@color/colorPrimary"
            android:text="@string/tamil"

            />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/english"

            />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/hindi"


            />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:padding="30dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/radio"


        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_size"

        android:text="@string/save"
        android:textColor="@color/button_text"/>

</RelativeLayout>