<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/editText_name"
        android:textColorHint="@color/color_textView"
        android:textColor="@color/button_text"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:drawableTint="@color/colorAccent"
        android:layout_marginTop="60dp"
        android:theme="@style/MyEditTextTheme"
        android:singleLine="true"

        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:hint="@string/editText_phone"
        android:inputType="phone"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawableTint="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:textColor="@color/button_text"
        android:textColorHint="@color/color_textView"
        android:theme="@style/MyEditTextTheme"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/phone"
        android:layout_marginTop="25dp"
        android:hint="@string/editText_username"
        android:textColor="@color/button_text"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawableTint="@color/colorAccent"
        android:textColorHint="@color/color_textView"
        android:theme="@style/MyEditTextTheme"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress"
        android:hint="@string/editText_email"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawableTint="@color/colorAccent"
        android:textColorHint="@color/color_textView"
        android:textColor="@color/button_text"
        android:theme="@style/MyEditTextTheme"
        android:singleLine="true" />


    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/email"
        android:hint="@string/editText_password"
        android:textColor="@color/button_text"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:textColorHint="@color/color_textView"
        android:drawableTint="@color/colorAccent"
        android:theme="@style/MyEditTextTheme"
        android:singleLine="true" />
    <TextView
        android:id="@+id/rUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/password_condition"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_textView"

        />


    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/button_text"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_size"
        android:text="@string/button_signup"
        android:elevation="1000dp"
        android:textSize="18sp"
        android:typeface="sans"
        android:textStyle="bold"

        />

</RelativeLayout>