<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".ui.notifications.NotificationsFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:padding="10dp"

    android:weightSum="1">

    <ImageView
        android:id="@+id/qnImage"
        android:layout_below="@+id/question"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        tools:src="@drawable/img1"
        android:background="@color/colorAccent"/>



    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:id="@+id/cardview1"
        android:layout_below="@+id/qnImage"
        android:layout_centerHorizontal="true"

        >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/radio_one"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:checked="true"
                android:padding="20dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/choice1"

                />

            <RadioButton
                android:id="@+id/radio_two"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/choice2"

                />

            <RadioButton
                android:id="@+id/radio_three"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/choice3"


                 />
        </RadioGroup>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/question"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:text="Questions"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        />


    <Button
        android:id="@+id/next"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@+id/cardview1"
        android:layout_marginTop="45dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:background="@drawable/mainpage_button"
        android:textColor="@color/button_text"
        android:textStyle="bold"
        android:elevation="20dp"
        android:backgroundTint="@color/colorAccent"
        />

    <Button
        android:id="@+id/exit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview1"
        android:layout_marginTop="45dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/mainpage_button"
        android:backgroundTint="@color/color_topic"
        android:elevation="20dp"
        android:text="@string/exit"
        android:layout_marginLeft="25dp"
        android:textColor="@color/button_text"
        android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>